src/istio-flagger/deployment.yaml
# deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: simple-nginx
spec:
    replicas: 3
    selector:
        matchLabels:
            app: simple-nginx
    template:
        metadata:
            labels:
                app: simple-nginx
        spec:
            containers:
                - name: simple-nginx
                  image: dhinojosa/simple-nginx:1.0.4
                  ports:
                      - containerPort: 80
                  resources:
                      requests:
                          cpu: "100m"
                          memory: "256Mi"
                      limits:
                          cpu: "200m"
                          memory: "512Mi"
