src/istio-flagger/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
    name: simple-nginx-gateway
spec:
    # The selector matches the ingress gateway pod labels.
    # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
    selector:
        istio: ingressgateway # use istio default controller
    servers:
        -   port:
                number: 80
                name: http-tcp
                protocol: HTTP
            hosts:
                - "*"
